# auto-claude-code

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
.acc_data/: acc.db
.claude/: settings.local.json
acc/: __main__.py  claude_md.py  cli.py  config.py  db.py  hooks.py  memory.py  orchestrator.py  tmux_runner.py
dashboard/: app.py
dashboard/templates/: index.html  live.html
docs/: ARCHITECTURE.md
tests/: conftest.py  test_db.py  test_orchestrator.py  test_tmux.py
